--- a/OctagonPlatform/Views/Terminals/Sections/EditTerminalConfig.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/EditTerminalConfig.cshtml
@@ -4,7 +4,7 @@
         @using (Html.BeginForm("EditConfigAlert", "Terminals", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
-            @Html.HiddenFor(m => m.TerminalId)
+            @Html.HiddenFor(m => m.Id)
             <p class="alert alert-danger">
                 All fields are <strong>required.</strong>
                 @ViewBag.Error
