Arreglo TerminalId solo dos digitos del Ano (MMddyy)

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -53,7 +53,7 @@
         @foreach (var item in Model)
         {
             <tr class="info">
-                <td>@item.Id</td>
+                <td>@item.TerminalId</td>
                 <td>@item.Partner.BusinessName</td>
                 <td>@item.LocationType.Name</td>
                 <td>@item.Address1</td>
