--- a/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
@@ -46,7 +46,7 @@
         if (!item.Deleted)
         {
             <tr class="info">
-                <td>@item.Id</td>
+                <td>@item.TerminalId</td>
                 <td>@item.Partner.BusinessName</td>
                 <td>@item.Address1</td>
                 <td>@item.Zip</td>
