--- a/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/GeneralInfo.cshtml
@@ -13,6 +13,11 @@
     </tr>
     <tr class="info">
 
+        <th>Free Surcharge Fee Contract Conclude:</th>
+        <th>@Model.Parent.FreeSurchargeFeeContractConclude.ToShortDateString()</th>
+    </tr>
+    <tr class="info">
+
         <th>Address1:</th>
         <th>@Model.Address1</th>
     </tr>
