--- a/OctagonPlatform/Views/Terminals/Delete.cshtml
+++ b/OctagonPlatform/Views/Terminals/Delete.cshtml
@@ -169,18 +169,25 @@
         @Html.DisplayFor(model => model.SurchargeType)
     </dd>
     <dt>
-        @Html.DisplayNameFor(model => model.SurchargeByPercent)
+        @Html.DisplayNameFor(model => model.SurchargeAmountFee)
     </dt>
 
     <dd>
-        @Html.DisplayFor(model => model.SurchargeByPercent)
+        @Html.DisplayFor(model => model.SurchargeAmountFee)
     </dd>
     <dt>
-        @Html.DisplayNameFor(model => model.SettledType)
+        @Html.DisplayNameFor(model => model.SurchargePercentageFee)
     </dt>
 
     <dd>
-        @Html.DisplayFor(model => model.SettledType)
+        @Html.DisplayFor(model => model.SurchargePercentageFee)
+    </dd>
+    <dt>
+        @Html.DisplayNameFor(model => model.SurchargePercentageFee)
+    </dt>
+
+    <dd>
+        @Html.DisplayFor(model => model.SurchargePercentageFee)
     </dd>
     <dt>
         @Html.DisplayNameFor(model => model.WhoInitiates)
