--- a/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
@@ -40,6 +40,21 @@
                 <th>@Model.City.Name</th>
             </tr>
         }
+    <tr class="info">
+
+        <th>Surcharged By:</th>
+        <th>@Model.SurchargeType</th>
+    </tr>
+    <tr class="info">
+
+        <th>Surcharge Amount Fee:</th>
+        <th>@Model.SurchargeAmountFee</th>
+    </tr>
+    <tr class="info">
+
+        <th>Surcharge Percentage Fee:</th>
+        <th>@Model.SurchargePercentageFee</th>
+    </tr>
         <tr class="info">
 
             <th>Created At:</th>
