--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -21,6 +21,12 @@
         @Html.ValidationMessageFor(m => m.BusinessName)
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.FreeSurchargeFeeContractConclude)
+        @Html.TextBoxFor(m => m.FreeSurchargeFeeContractConclude, new { @class = "form-control", autofocus = "autofocus", @type = "date" })
+        @Html.ValidationMessageFor(m => m.FreeSurchargeFeeContractConclude)
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(m => m.ParentId)
         @Html.DropDownListFor(m => m.ParentId, new SelectList(Model.Parents, "Id", "BusinessName"), "", new {@class = "form-control"})
         @Html.ValidationMessageFor(m => m.ParentId)
