--- a/OctagonPlatform/Views/TerminalMessages/Index.cshtml
+++ b/OctagonPlatform/Views/TerminalMessages/Index.cshtml
@@ -14,22 +14,28 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Terminal.TerminalId)
-        </th> 
+        </th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direction)
-            </td>
-        </tr>
-    }
-
 </table>
+@foreach (var item in Model)
+{
+    <div class="panel-group" style="width: 100%; ">
+        <div class="panel panel-default">
+            @Ajax.ActionLink(Html.DisplayFor(modelItem => item.Id).ToHtmlString(), "MessagesDetail", "TerminalMessages", new { messagesId = item.Id, direction = item.Direction }, new AjaxOptions { UpdateTargetId = item.Id.ToString(), LoadingElementId = "loading3", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#" + @item.Id.ToString() })
+            @Html.DisplayFor(modelItem => item.Date)
+            @Html.DisplayFor(modelItem => item.Direction)
+
+            <div id="@item.Id.ToString()" class="panel-collapse collapse">
+                <img id="loading3" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+            </div>
+
+        </div>
+    </div>
+
+}
+
+
+@section Scripts {
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}
