--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -9,12 +9,16 @@
 <br />
 <hr />
 <br />
+@Html.ActionLink(linkText: "View messages", actionName: "Index", controllerName: "TerminalMessages", routeValues: new
+{
+    terminalId = Model.TerminalId
+}, htmlAttributes: null);
 
 <div class="panel-group" style="width: 33%; float:right;">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="alert-info">@Ajax.ActionLink("Config Notification", "ConfigNotification", "Terminals", new { terminalId = Model.Id }, new AjaxOptions { UpdateTargetId = "getConfigNotification", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getConfigNotification" })</h3>
-            
+
             <div id="getConfigNotification" class="panel-collapse collapse">
                 <img id="loading4" style="display:none" src="~/Content/loading_icon.gif" alt="" />
             </div>
