Surcharge calculo del prociento y el split amount fee javascript

--- a/OctagonPlatform/Views/Shared/Error.cshtml
+++ b/OctagonPlatform/Views/Shared/Error.cshtml
@@ -1,1 +1,2 @@
-﻿<h1>Error, Page not found. </h1>
+﻿<h1 class="alert-info">Error, Page not found. </h1>
+<h3 class="alert-danger">@ViewBag.Error</h3>
