--- a/OctagonPlatform/Views/TerminalContacts/Create.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Create.cshtml
@@ -108,7 +108,7 @@
     </div>
     <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-            <button type="submit" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
             <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
