--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -92,8 +92,16 @@
 <br />
 <hr />
 <br />
-<div id="surcharges">
-    @Html.Partial("Sections/SurchargeSplits", Model)
+<div class="panel-group" style="width: 100%;">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="alert-info">@Ajax.ActionLink("Surcharges", "Index", "Surcharge", new { terminalId = Model.Id }, new AjaxOptions { UpdateTargetId = "getSurcharge", LoadingElementId = "loading5", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getSurcharge" })</h3>
+
+            <div id="getSurcharge" class="panel-collapse collapse">
+                <img id="loading5" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+            </div>
+        </div>
+    </div>
 </div>
 <br />
 <hr />
