--- a/OctagonPlatform/Views/Partners/Delete.cshtml
+++ b/OctagonPlatform/Views/Partners/Delete.cshtml
@@ -111,7 +111,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            <input type="submit" value="Delete" class="btn btn-primary" /> |
+            <input type="submit" value="Delete" class="btn btn-primary" /> 
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
