--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -12,7 +12,7 @@
 @Html.ActionLink(linkText: "View messages", actionName: "Index", controllerName: "TerminalMessages", routeValues: new
 {
     terminalId = Model.TerminalId
-}, htmlAttributes: null);
+}, htmlAttributes: null)
 
 <div class="panel-group" style="width: 33%; float:right;">
     <div class="panel panel-default">
