--- a/OctagonPlatform/Views/Shared/Error.cshtml
+++ b/OctagonPlatform/Views/Shared/Error.cshtml
@@ -1,2 +1,6 @@
-﻿<h1 class="alert-info">Error, Page not found. </h1>
+﻿@{
+    ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
+}
+<h1 class="alert-info">Error, Page not found. </h1>
 <h3 class="alert-danger">@ViewBag.Error</h3>
