--- a/OctagonPlatform/Views/VaultCash/Delete.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Delete.cshtml
@@ -42,7 +42,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-primary" /> |
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
