creado  viewModel para la config de las alertas que se queire ignorar

--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -16,7 +16,7 @@
                 <!-- /.nav-second-level -->
             </li>
             <li>
-                <a href="@Url.Action("", "")"><i class="fa fa-table fa-fw"></i> Alerts</a>
+                <a href="@Url.Action("Index", "Alerts")"><i class="fa fa-table fa-fw"></i> Alerts</a>
             </li>
             
         </ul>
