--- a/OctagonPlatform/Views/Terminals/Sections/EditTerminalConfig.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/EditTerminalConfig.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.TerminalAlertConfig
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalAlertIngnoredViewModel
         <h3 class="alert-info">Edit Config Alert</h3>
 
         @using (Html.BeginForm("EditConfigAlert", "Terminals", FormMethod.Post))
