--- a/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
@@ -53,7 +53,7 @@
     <tr class="info">
 
         <th>Surcharge Percentage Fee:</th>
-        <th>@Model.SurchargePercentageFee</th>
+        <th>@Model.SurchargePercentageFee%</th>
     </tr>
         <tr class="info">
 
