--- a/OctagonPlatform/Views/Surcharge/Index.cshtml
+++ b/OctagonPlatform/Views/Surcharge/Index.cshtml
@@ -17,7 +17,7 @@
                         )
                 </li>
             </ul>
-
+            
         </div>
 
     </div>
@@ -29,13 +29,15 @@
 <table class="table table-striped table-hover ">
     <thead>
     <tr>
+        
         <th>BankAccount</th>
         <th>BankName</th>
         <th>Split Amount</th>
         <th>Split Percentage</th>
         <th>Effective Date</th>
         <th>Stop Date</th>
-       
+        <th>Total Surcharge fee</th>
+
     </tr>
     </thead>
 
