--- a/OctagonPlatform/Views/Terminals/Edit.cshtml
+++ b/OctagonPlatform/Views/Terminals/Edit.cshtml
@@ -143,12 +143,12 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.SurchargeAmountFee)
-            @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
+            @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "" })
             @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.SurchargePercentageFee)
-            @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
+            @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "%" })
             @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
         </div>
         <div class="form-group">
