--- a/OctagonPlatform/Views/Terminals/Edit.cshtml
+++ b/OctagonPlatform/Views/Terminals/Edit.cshtml
@@ -148,7 +148,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.SurchargePercentageFee)
-            @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "%" })
+            @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "%" })%
             @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
         </div>
         <div class="form-group">
@@ -197,4 +197,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/xpopulate")
+    
 }
